# gloss-modeling

./: LICENSE  README.md  gloss-modeling.cabal  stack.yaml
src/chapter01/example_01_01/: Ball.hs  Main.hs
src/chapter02/example_02_01/: Ball.hs  Main.hs
src/chapter02/example_02_02/: Ball.hs  Main.hs
src/chapter02/example_02_03/: Config.hs  Main.hs
src/chapter02/example_02_04/: Ball.hs  Config.hs  Main.hs
src/chapter02/example_02_05/: Ball.hs  Config.hs  Liquid.hs  Main.hs
src/preliminaries/gloss/: Main.hs
