name:                gloss-modeling
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gloss-modeling#readme
license:             BSD3
license-file:        LICENSE
author:              José Edil G. de Medeiros
maintainer:          j.edil@ene.unb.br
copyright:           2018 José Edil G. de Medeiros
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gloss-preliminaries
  hs-source-dirs:      src/preliminaries/gloss
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss == 1.12.*
  ghc-options:         -O2 -Wall -threaded -rtsopts

executable example_01_01
  hs-source-dirs:      src/chapter01/example_01_01
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss == 1.12.*
  ghc-options:         -O2 -Wall -threaded -rtsopts
  other-modules:       Ball

executable example_02_01
  hs-source-dirs:      src/chapter02/example_02_01
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss == 1.12.*
  ghc-options:         -O2 -Wall -threaded -rtsopts
  other-modules:       Ball

executable example_02_02
  hs-source-dirs:      src/chapter02/example_02_02
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss == 1.12.*
                     , random == 1.*
  ghc-options:         -O2 -Wall -threaded -rtsopts
  other-modules:       Ball
                       Config

executable example_02_03
  hs-source-dirs:      src/chapter02/example_02_03
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss == 1.12.*
                     , random == 1.*
  ghc-options:         -O2 -Wall -threaded -rtsopts
  other-modules:       Ball
                       Config
